update some styling

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,4 +1,26 @@
-{% extends 'base.html' %} {% block title %}HOME{% endblock %} 
+{% extends 'base.html' %}
+
+{% block title %}HOME{% endblock %}
+
 {% block content %}
-    <h1>Home Page</h1>
+    <div class="container mt-5">
+        <h1 class="text-center">All Notes</h1>
+        <div class="container mt-4">
+            {% for note in user.notes %}
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <p class="card-text">{{ note.data }}</p>
+                        <p class="card-text"><small class="text-muted">Created on {{ note.date.strftime('%Y-%m-%d %H:%M:%S') }}</small></p>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+        <form action="" method="POST" class="form-group mt-4">
+            <textarea name="note" id="note" class="form-control" placeholder="Enter your note..." rows="3"></textarea>
+            <br>
+            <div class="d-grid gap-2 col-6 mx-auto">
+                <button class="btn btn-primary" type="submit">Save</button>
+            </div>
+        </form>
+    </div>
 {% endblock %}
