--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -28,10 +28,13 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <a class="nav-item nav-link" id="home" href="/">Home</a>
-          <a class="nav-item nav-link" id="login" href="/login">Login</a>
-          <a href="/logout" id="logout" class="nav-item nav-link">Logout</a>
-          <a href="/sign_up" id="signUp" class="nav-item nav-link">Sign-Up</a>
+            {% if user.is_authenticated %}
+                <a class="nav-item nav-link" id="home" href="/">Home</a>
+                <a href="/logout" id="logout" class="nav-item nav-link">Logout</a>                
+            {% else %}
+                <a class="nav-item nav-link" id="login" href="/login">Login</a>
+                <a href="/sign_up" id="signUp" class="nav-item nav-link">Sign-Up</a>
+            {% endif %}
         </ul>
       </div>
     </nav>
